--- a/MVC/StudentApp_DbConnection/Views/Student/GetAllStudents.cshtml
+++ b/MVC/StudentApp_DbConnection/Views/Student/GetAllStudents.cshtml
@@ -29,7 +29,7 @@
                         <td>@item.Email</td>
                         <td>@item.Address</td>
                         <td>
-                            <button style="color: black; text-decoration: none">
+                            <button style="text-decoration: none">
                                 <a>Edit</a>
                             </button>
                             <button style="color: black; text-decoration: none">
