--- a/FoodApp/FoodApp.UI/Areas/Auth/Views/Authentication/LoginForm.cshtml
+++ b/FoodApp/FoodApp.UI/Areas/Auth/Views/Authentication/LoginForm.cshtml
@@ -14,25 +14,29 @@
                 </button> *@
             </div>
             <div class="modal-body">
-                <form asp-action="" method="post">
+                <form asp-action="VerifyUser" method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="mb-3">
                         <label asp-for="Username">Username</label>
-                        <input asp-for="Username" type="email" placeholder="Enter username" class="form-control" required/>
+                        <input asp-for="Username" type="email" placeholder="Enter username" class="form-control"/>
+                        <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
 
                     <div class="mb-3">
                         <label asp-for="Password">Password</label>
-                        <input asp-for="Password" type="password" placeholder="Enter password" class="form-control" required />
+                        <input asp-for="Password" type="password" placeholder="Enter password" class="form-control"/>
+                        <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
 
                     <div class="d-flex mt-2 mb-3">
                         <b class="me-2">Don't have account ?</b>
-                        <a class="text-decoration-none" asp-action="SignupForm" asp-controller="Authentication" asp-area="Auth">Signup</a>
+                        <a class="text-decoration-none" asp-area="Auth" asp-controller="Authentication" asp-action="Signup">Signup</a>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-primary">Login</button>
+                        <button type="submit" class="btn btn-primary">Login</button>
                         @* <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> *@
                     </div>
+
                 </form>
             </div>
         </div>
@@ -40,6 +44,7 @@
 </div>
 
 @section Scripts{
+    <partial name="_ValidationScriptsPartial" />
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             setTimeout(function () {
