--- a/MVC/PizzaHubProj/PizzaHub/Areas/Auth/Views/Authentication/Index.cshtml
+++ b/MVC/PizzaHubProj/PizzaHub/Areas/Auth/Views/Authentication/Index.cshtml
@@ -3,6 +3,19 @@
 @* @{
     Layout = "_FullLayout";
 } *@
+<<style>
+     body {
+         margin: 0;
+         padding: 0;
+         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+         background: linear-gradient(135deg, #74ebd5 0%, #ACB6E5 100%);
+         height: 100vh;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+     }
+
+</style>
 
 <!-- Modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
@@ -10,32 +23,53 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                @*  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> *@
             </div>
             <div class="modal-body">
-                <form>
+                <form asp-action="VerifyUser" method="post">
 
                     <div class="mb-3">
                         <label asp-for="UserName">Username</label>
+                        @* <div class="btn-group">
+                        <i class="bi bi-person"></i>
                         <input type="email" placeholder="Enter Username" asp-for="UserName" class="form-control" />
+                        </div> *@
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1"> <i class="bi bi-person"></i></span>
+                            </div>
+                            <input type="email" placeholder="Enter Username" asp-for="UserName" class="form-control" />
+                        </div>
+
                     </div>
 
                     <div class="mb-3">
                         <label asp-for="Password">Password</label>
-                        <input type="password" placeholder="Enter Password" asp-for="Password" class="form-control" />
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                               <span class="input-group-text"><i class="bi bi-lock"></i></span>
+                            </div>
+                          <input type="password" placeholder="Enter Password" asp-for="Password" class="form-control" />
+                        </div>
                     </div>
 
-                   @*  <button type="submit" class="btn btn-primary">Login</button> *@
-                   <div class="d-flex float-lg-end">
+                    <div class="d-flex float-lg-end">
                         <b>Don't have account ?.</b>
                         <a class="ms-2 text-decoration-none" asp-action="SignupForm">Signup</a>
-                   </div>
+                    </div>
+
+                    <div>
+                        @*  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> *@
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </div>
+
+                    @*  <div>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("VerifyUser", "Authentication", Model)'">Login</button>
+                    </div> *@
                 </form>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Login</button>
-            </div>
+
         </div>
     </div>
 </div>
