--- a/MVC/PizzaHubProj/PizzaHub/Areas/Auth/Views/Authentication/SignupForm.cshtml
+++ b/MVC/PizzaHubProj/PizzaHub/Areas/Auth/Views/Authentication/SignupForm.cshtml
@@ -1,16 +1,29 @@
 ﻿@using PizzaHub.Models
-@model SignupFormModel
+@model UserModel
 
+<<style>
+     body {
+         margin: 0;
+         padding: 0;
+         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+         background: linear-gradient(135deg, #74ebd5 0%, #ACB6E5 100%);
+         height: 100vh;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+     }
+
+</style>
 <!-- Modal -->
 <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
     <div class="modal-dialog" style="top: 100px">
         <div class="modal-content">
             <div class="modal-header">
                 <h1 class="modal-title fs-5" id="signupModalLabel">SignUp</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+               @*  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> *@
             </div>
             <div class="modal-body">
-                <form>
+                <form asp-action="InsertOrUpdateUser" asp-area="Auth" asp-controller="Authentication" method="post">
                     <div class="mb-3">
                         <label asp-for="FirstName">FirstName</label>
                         <input type="text" placeholder="Enter first name" asp-for="FirstName" class="form-control" />
@@ -36,13 +49,15 @@
                         <input type="number" placeholder="Enter PhoneNumber" asp-for="PhoneNumber" class="form-control" />
                     </div>
 
-                    @*  <button type="submit" class="btn btn-primary">Login</button> *@
+                    <div class="modal-footer">
+                       @*  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> *@
+                        <button type="submit" class="btn btn-primary">
+                            <a  class="text-decoration-none text-white">Submit</a>
+                        </button>
+                    </div>
                 </form>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Submit</button>
-            </div>
+           
         </div>
     </div>
 </div>
