--- a/MVC/PizzaHubProj/PizzaHub/Views/Shared/_Footer.cshtml
+++ b/MVC/PizzaHubProj/PizzaHub/Views/Shared/_Footer.cshtml
@@ -1,7 +1,42 @@
-﻿
+﻿<div class="modal-footer bg-dark" style="height: 15dvh">
+    <div class="container">
+        <div class="row text-white">
+            <div class="col-md-3">
+                <div class="d-flex">
+                    <i class="bi bi-geo-alt-fill text-warning me-2"></i>
+                    <h5>Address</h5>
+                </div>
+                <span>111/A1, Green Park, New Delhi</span>
+            </div>
 
-<div class="footer bg-dark" style="height: 20dvh">
-    <div class="container text-white">
-        &copy; 2025 - Pizza Hub - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <div class="col-md-3">
+                <div class="d-flex">
+                    <i class="bi bi-envelope-at-fill text-warning me-2"></i>
+                    <h5>Email Us</h5>
+                </div>
+                <span>PizzaHub@gmail.com</span>
+            </div>
+
+            <div class="col-md-3">
+                <div class="d-flex">
+                    <i class="bi bi-telephone-fill text-warning me-2"></i>
+                    <h5>Call Us</h5>
+                </div>
+                <span>1234567889</span>
+            </div>
+
+            @*  <div class="col-md-3">
+            <div class="d-flex">
+            <i></i>
+            <h5>Address</h5>
+            </div>
+            <span>Official Address</span>
+            </div> *@
+        </div>
+
+        <div class="text-white text-center bg-gradient" style="position: relative; top: 28px; width: 860px;">
+            <span>FoodApp &copy; 2025</span>
+        </div>
     </div>
+
 </div>
