--- a/MVC/PizzaHubProj/PizzaHub/Views/Product/GetProducts.cshtml
+++ b/MVC/PizzaHubProj/PizzaHub/Views/Product/GetProducts.cshtml
@@ -29,7 +29,7 @@
                     <div class="carousel-inner">
                         @for (int i = 0; i < imagesUrl.Count; i++)
                         {
-                            <div class="carousel-item active">
+                            <div class="carousel-item @(i == 0 ? "active" : "")">
                                 <img src="@Url.Content(imagesUrl[i])" class="d-block w-100" alt="..." style="height: 26dvh; width: 400px">
                             </div>
                         }
