working on cart

--- a/FoodApp/FoodApp.UI/Views/Shared/_Header.cshtml
+++ b/FoodApp/FoodApp.UI/Views/Shared/_Header.cshtml
@@ -60,7 +60,7 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item bg-white" href="#">
+                            <a class="dropdown-item bg-white" asp-action="Signup" asp-controller="Authentication" asp-area="Auth" data-toggle="modal" data-target="#signupModal">
                                 <i class="bi bi-gear-fill me-2"></i> Signup
                             </a>
                         </li>
