--- a/FoodApp/FoodApp.UI/Areas/Auth/Views/Authentication/Signup.cshtml
+++ b/FoodApp/FoodApp.UI/Areas/Auth/Views/Authentication/Signup.cshtml
@@ -1,5 +1,77 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using FoodApp.Models
+@model UserModel
 @{
+    ViewData["Title"] = "Login Page";
+}
+
+<div class="modal fade" id="signupModal" tabindex="-1" role="dialog" style="background: rgba(245, 114, 89, 0.34)">
+    <div class="modal-dialog" role="document" style="top: 150px">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Signup</h5>
+                @* <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button> *@
+            </div>
+            <div class="modal-body">
+                <form asp-action="AddUser" method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="mb-3">
+                        <label asp-for="FirstName">FirstName</label>
+                        <input asp-for="FirstName" type="text" placeholder="Enter FirstName" class="form-control" required/>
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <label asp-for="LastName">LastName</label>
+                        <input asp-for="LastName" type="text" placeholder="Enter LastName" class="form-control" required/>
+                        <span asp-validation-for="LastName" class="text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <label asp-for="Email">Email</label>
+                        <input asp-for="Email" type="email" placeholder="Enter Email" class="form-control" required/>
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <label asp-for="PhoneNumber">PhoneNumber</label>
+                        <input asp-for="PhoneNumber" type="number" placeholder="Enter PhoneNumber" class="form-control" required/>
+                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                    </div>
+
+
+                    <div class="mb-3">
+                        <label asp-for="Password">Password</label>
+                        <input asp-for="Password" type="password" placeholder="Enter password" class="form-control" required/>
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <label asp-for="Address">Address</label>
+                        <input asp-for="Address" type="text" placeholder="Enter Address" class="form-control" required/>
+                        <span asp-validation-for="Address" class="text-danger"></span>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        @* <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> *@
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            setTimeout(function () {
+                const modal = new bootstrap.Modal(document.getElementById('signupModal'));
+                modal.show();
+            }, 200)
+        })
+    </script>
 }
