--- a/MVC/PizzaHubProj/PizzaHub/Views/Shared/_Footer.cshtml
+++ b/MVC/PizzaHubProj/PizzaHub/Views/Shared/_Footer.cshtml
@@ -35,7 +35,7 @@
         </div>
 
         <div class="text-white text-center bg-gradient" style="position: relative; top: 28px; width: 860px;">
-            <span>FoodApp &copy; 2025</span>
+            <span>PizzaHub &copy; 2025</span>
         </div>
     </div>
 
