--- a/FoodApp/FoodApp.UI/Areas/Auth/Views/Authentication/LoginForm.cshtml
+++ b/FoodApp/FoodApp.UI/Areas/Auth/Views/Authentication/LoginForm.cshtml
@@ -18,13 +18,20 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="mb-3">
                         <label asp-for="Username">Username</label>
-                        <input asp-for="Username" type="email" placeholder="Enter username" class="form-control"/>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1"><i class="bi bi-person"></i></span>
+                            <input asp-for="Username" type="email" placeholder="Enter username" class="form-control" aria-describedby="basic-addon2" />
+                        </div>
                         <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
 
                     <div class="mb-3">
                         <label asp-for="Password">Password</label>
-                        <input asp-for="Password" type="password" placeholder="Enter password" class="form-control"/>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1"><i class="bi bi-lock"></i></span>
+                            <input asp-for="Password" type="password" placeholder="Enter password" class="form-control" aria-describedby="basic-addon1" />
+                        </div>
+                       
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
 
