working on cart item page

--- a/FoodApp/FoodApp.UI/Views/Shared/_Header.cshtml
+++ b/FoodApp/FoodApp.UI/Views/Shared/_Header.cshtml
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <a class="text-decoration-none text-black me-3 font">
+            <a class="text-decoration-none text-black me-3 font" asp-action="ShowCartItems" asp-controller="Cart">
                 <i class="bi bi-cart-plus-fill"></i>
             </a>
         </nav>
