--- a/FoodApp/FoodApp.UI/Areas/Auth/Views/Authentication/LoginForm.cshtml
+++ b/FoodApp/FoodApp.UI/Areas/Auth/Views/Authentication/LoginForm.cshtml
@@ -50,6 +50,10 @@
     </div>
 </div>
 
+@if(TempData.Keys.Count > 0)
+{
+    <partial name="_Notification" />
+}
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
     <script>
