--- a/MVC/PizzaHubProj/PizzaHub/Views/Cart/DisplayCartItems.cshtml
+++ b/MVC/PizzaHubProj/PizzaHub/Views/Cart/DisplayCartItems.cshtml
@@ -6,6 +6,7 @@
 
 <div class="card">
     <div class="card-body">
+        <h4 class="border-bottom">Total Item: @Model.Count</h4>
         @if(Model.Count() > 0)
         {
             @foreach(var item in Model)
@@ -34,16 +35,29 @@
                                     
                                 </div>
 
-                                <div>
+                                <div class="mb-3">
                                     <small>@product.Currency</small>
-                                     @item.UnitPrice
-                                   
+                                    <strong>@item.UnitPrice</strong>
+                                </div>
+
+                                <div class="mb-2">
+                                    <button class="btn btn-danger ">
+                                        <a href="@Url.Action("DeleteItem", "Cart", new {productId = product.Id})" class="text-decoration-none text-white">Delete</a>
+                                    </button>
+                                    <span class="ms-3">
+                                        <button  class="btn btn-warning">
+                                            <a class="text-decoration-none" href=@Url.Action("CheckoutForCart", "Cart", new {productId = product.Id})>Buy</a>
+                                        </button>
+                                    </span>
+                                    
                                 </div>
                             </div>
                         </div>
                     }
+                   
                 }
             }
+            <a href=@Url.Action("CheckoutForCart", "Cart", new {productId = 0}) class="btn btn-warning mt-2">Buy All</a>
         }
         else
         {
