--- a/MVC/PizzaHubProj/PizzaHub/Views/Product/GetProducts.cshtml
+++ b/MVC/PizzaHubProj/PizzaHub/Views/Product/GetProducts.cshtml
@@ -65,7 +65,7 @@
                         <p class="card-text">@item.ProductDescription</p>
                         <h5>@item.UnitPrice</h5>
                         <a asp-action="AddItemToCart" asp-controller="Cart" asp-route-productId ="@item.Id" class="btn btn-primary">Add To Cart</a>
-                        <a href="#" class="btn btn-warning float-end">Buy Now</a>
+                        <a href=@Url.Action("Checkout", "Cart", new {productId = @item.Id}) class="btn btn-warning float-end">Buy Now</a>
                     </div>
                 </div>
             </div>
