--- a/Angular/PurchaseStore_Frontend/src/app/components/admin/pages/admin-layout/admin-layout.component.html
+++ b/Angular/PurchaseStore_Frontend/src/app/components/admin/pages/admin-layout/admin-layout.component.html
@@ -2,15 +2,25 @@
     <app-admin-header class="admin-header"></app-admin-header>
     <mat-sidenav-container class="sidenav-container">
         <mat-sidenav #drawer mode="side" [opened]="isExpanded" class="sidenav">
-            <mat-nav-list>
-               <a mat-list-item>Dashboard</a>
-               <a mat-list-item>Product</a>
-               <a mat-list-item>Report</a>
-            </mat-nav-list>
+                <mat-nav-list *ngFor="let item of navItems">
+                    <mat-list-item (click)="showSubMenu = !showSubMenu">
+                        <span>{{item.Name}}</span>
+                        <mat-icon class="ms-5">expand_more</mat-icon>
+                    </mat-list-item>
+                    
+                    <div class="submenu" [ngClass]="{'expand': showSubMenu}">
+                        <ng-container *ngFor="let child of item.children">
+                            <a mat-list-item routerLink="{{child.Url}}">
+                                <mat-icon class="me-3">{{child.icon}}</mat-icon>
+                                <span>{{child.Name}}</span>
+                            </a>
+                        </ng-container>
+                    </div>
+                </mat-nav-list>
         </mat-sidenav>
         <mat-sidenav-content>
             <div class="main-content">
-               <router-outlet></router-outlet>
+                <router-outlet></router-outlet>
             </div>
         </mat-sidenav-content>
     </mat-sidenav-container>
